--- a/views/cautions.ejs
+++ b/views/cautions.ejs
@@ -39,7 +39,7 @@
       </tr>
       <tr>
         <td>8</td>
-        <td>wifi 帳密公布於房內牆壁上，請勿任意更改。</td>
+        <td>wifi 帳密公布於屋內牆壁上，請勿任意更改。</td>
       </tr>
     </table>
   </section>
@@ -54,11 +54,11 @@
       </tr>
       <tr>
         <td>1</td>
-        <td>本民宿只提供沐浴乳及洗髮乳，其餘盥洗用品及毛巾請自備。</td>
+        <td>僅提供沐浴乳及洗髮乳，其餘盥洗用品及毛巾請自備。</td>
       </tr>
       <tr>
         <td>2</td>
-        <td>晚上蚊蟲較多，將提供蚊香及紫雲膏，但還是自備防蚊液以備不時之需。</td>
+        <td>晚上蚊蟲較多，將提供蚊香及紫雲膏，但還是請自備防蚊液以備不時之需。</td>
       <tr>
         <td>3</td>
         <td>台東是個豔陽高照的地方，請準備防曬乳。</td>
