--- a/views/fiftyblue.ejs
+++ b/views/fiftyblue.ejs
@@ -3,7 +3,7 @@
 
 <section class='row'>
   <section class='col-md-6 col-sm-6'>
-    <h4><i class='icon-flag'></i> 風格</h4>
+    <h4><i class='icon-flag'></i> 五十藍</h4>
   </section>
 
   <section class='col-md-6 col-sm-6'>
